# CopilotKit-Deepmind

./: .gitignore  README.md  package.json
agent/: agent.py  main.py  posts_generator_agent.py  prompts.py  pyproject.toml  stack_agent.py
app/stack-analyzer/: page.tsx
frontend/: package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  samopl.txt
frontend/app/api/copilotkit/: route.ts
frontend/app/contexts/: LayoutContext.tsx
frontend/app/post-generator/: page.tsx
frontend/app/prompts/: prompts.ts
frontend/app/stack-analyzer/: page.tsx
frontend/components/ui/: linkedin-post.tsx  x-post.tsx
scripts/: setup-agent.bat  setup-agent.sh
