[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "orca-copilotkit",email = "testapp@copilotkit.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.28.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
